# mahamudra-kalima

./: .gitignore  =4.0.0  CHANGELOG.md  LICENSE  LOCAL_USAGE.md  PUBLISHING_STEPS.md  PYPI_TOKEN_SETUP.md  README.md  READY_TO_RELEASE.md  RELEASE.md  REQUIREMENTS.md  TAGGING.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: architecture.md  classifier.md  contributing.md  functional-analysis.md  index.md  install.md  technical-analysis.md  usage.md
src/kalima/: __init__.py  __main__.py  classifier.py  cli.py  config.py  currency.py  dashboard.py  export.py  models.py  parser.py  pricing_default.json  report.py  types.py
tests/: conftest.py  fixtures.py  test_classifier.py  test_cli.py  test_config.py  test_currency.py  test_dashboard.py  test_export.py  test_models.py  test_parser.py  test_report.py  test_types.py
